Make some refactoring in Relation  and add new test cases to BugsTest for test behaviour of getting Showcase after optimize search results.